--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -1,7 +1,50 @@
 <header class="header">
+    <div class="title-container">
+      <h1>MyStore</h1>
+      <a [routerLink] ="['/store']" >List</a><span>|</span><a [routerLink] ="['/check-out']">Cart</a>
+    </div>
+    <div class="menu-container">
+      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu" >
+        <button mat-menu-item (click)="goStore()" >
+          <mat-icon>home</mat-icon>
+          <span><strong>Store</strong></span>
+        </button>
+        <button mat-menu-item (click)="goSignIn()" >
+          <mat-icon>login</mat-icon>
+          <span><strong>Sign In</strong></span>
+        </button>
+        <button mat-menu-item (click)="goSignUp()" >
+          <mat-icon>account_box</mat-icon>
+          <span><strong>Sign Up</strong></span>
+        </button>
+        <button mat-menu-item (click)="signOut()" >
+          <mat-icon>logout</mat-icon>
+          <span><strong>Logout</strong></span>
+        </button>
+      </mat-menu>
+    </div> 
+    <div class="user-container" *ngIf="user">
+      <div class="image-user">
+        <img class="rounded-circle" src="{{ (user.photoURL) ? user.photoURL : '../../../../assets/images/users/dummy-user.png' }}"
+           width="100%" height="100%"      alt="User">
+      </div> 
+      <div class="name-user">
+        Hello : <strong>{{(user.displayName) ? user.displayName : 'User'}}</strong> 
+      </div>
+    </div>
+    <div class="user-container" *ngIf="!user">
+      <div class="image-user">
+        <img class="rounded-circle" src="../../../../assets/images/users/dummy-user.png"
+           width="100%" height="100%"      alt="User">
+      </div> 
+      <div class="name-user">
+        Hello : <strong> User </strong> 
+      </div>
+    </div>
 
-    <h1>MyStore</h1>
-    <a [routerLink] ="['/']" >List</a><span>|</span><a [routerLink] ="['/check-out']">Card</a>
     <div class="shopping-container-header">
       <a [routerLink] ="['/check-out']">
         <div class="shop-icon">
@@ -11,5 +54,4 @@
         <div class="amount">$ {{ totalOrder.toFixed(2) }} </div>
       </a>  
     </div>
-    
-</header>
+</header> 
